[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_pytester_libasm"
version = "0.0.0"
authors = [
	{name = "Vincent MONTÉCOT"}
]
description = "A small tool to make 42's libASM project's testing easier."
keywords = [
	"42",
	"Born2Code",
	"42Born2Code",
	"ASM",
	"libASM",
	"tests",
]
readme = "README.md"
requires-python = ">=3.10"
# TODO: Organize dev dependencies
dependencies = [
	"invoke",
	"pytest>=7",
	"tox>=4",  # dev dependency
	"flake8",  # dev dependency
	"pyproject-flake8",  # dev dependency
	"black",  # dev dependency
]
classifiers = [
	"Development Status :: 1 - Planning",
	# To prevent accidental upload on PyPi until mature enough:
	"Private :: Do Not Upload",
	"Topic :: Education",
	"Topic :: Education :: Testing",
	"Intended Audience :: Education",
	"Environment :: Console",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS",
	"Natural Language :: English",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/vmonteco/ft_pytester_libasm"

[project.scripts]
42-pytester-libasm = "__main__:program.run"
ft-pytester-libasm = "__main__:program.run"
42asm = "__main__:program.run"

[tool.pytest.ini_options]
addopts = "--strict-markers"
minversion = "8.1.0"
norecursedirs = [
			  "libasm_test_suite",
]

[tool.black]
target-version = ["py310",]
line-length = 79
preview = true
